# diff_anbn

./: .gitignore  README.md  pyproject.toml
configs/experiment/: anbn.yaml  anbn_small.yaml  dyck.yaml
docs/: IMPLEMENTATION_LOG.md
scripts/: evaluate.py  generate.py  train.py
src/diff_anbn/: __init__.py
src/diff_anbn/config/: __init__.py  schemas.py
src/diff_anbn/diffusion/: __init__.py  mdlm.py  noise_schedule.py  sampling.py
src/diff_anbn/evaluation/: __init__.py  metrics.py  visualize.py
src/diff_anbn/languages/: __init__.py  anbn.py  base.py  dyck.py  registry.py  tokenizer.py
src/diff_anbn/models/: __init__.py  embeddings.py  transformer.py
src/diff_anbn/training/: __init__.py  data.py  trainer.py
tests/: __init__.py  test_diffusion.py  test_languages.py
